# ddareungi-mlops

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  train.py
docker/: Dockerfile  docker-compose.yml
docs/: model_card.md  problem_definition.md
src/: config.py
src/data/: collect.py  eda.py  join.py  weather.py
src/features/: build.py
src/models/: register.py  train.py
src/serving/: app.py  schema.py
tests/: test_api.py  test_features.py  test_schema.py
