[tool.poetry]
name = "ddareungi-mlops"
version = "0.1.0"
description = "서울 따릉이 대여 수요 예측 MLOps 서비스"
authors = ["your-name <your-email>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
lightgbm = "^4.3"
scikit-learn = "^1.4"
pandas = "^2.2"
numpy = "^1.26"
pyarrow = "^18.0"
mlflow = "^2.12"
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.29" }
pydantic = "^2.7"
pydantic-settings = "^2.2"
python-dotenv = "^1.0"
httpx = "^0.27"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-cov = "^5.0"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
